Remove references to DatatypeConverter
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1868953 13f79535-47bb-0310-9956-ffa450edef68